# june

./: .gitignore  CHANGELOG.md  README.md  package.json  tsconfig.base.json  tsconfig.json
.changeset/: build-noise.md  config.json  content-sources.md  declared-locales.md  fragment-title-bytestring.md  lazy-oxc-island-registry.md  lazy-vercel-og-edge.md  sparkdown-gfm-renderer.md  static-github-pages-target.md
.github/workflows/: changesets.yml  ci.yml  curator.yml  publish.yml
apps/june.build/: CHANGELOG.md  README.md  june.config.ts  og-dev.tsx  package.json  site.test.ts  tsconfig.json
apps/june.build/app/: HeroViewer.tsx  InstallCmd.tsx  ThemeToggle.tsx  ViewAs.tsx  _client.tsx  _content.ts  _extra.tsx  _islands.gen.ts  _og.tsx  actions.ts  content.ts  global.css  layout.tsx  not-found.tsx  og-card.tsx  og.tsx  page.tsx
apps/june.build/app/benchmarks/: page.tsx
apps/june.build/app/blog/: page.tsx
apps/june.build/app/docs/: _sections.ts  layout.tsx  page.tsx
apps/june.build/app/why/: page.tsx
apps/june.build/content/docs/: 01-getting-started.md  02-dual-audience.md  03-build-and-deploy.md  04-deployment.md  05-stability.md  concept-auth.md  features-actions.md  features-app-router.md  features-cli.md  features-client-router.md  features-content.md  features-data.md  features-dx.md  features-islands.md  features-layouts.md  features-live-updates.md  features-llms-txt.md  features-markdown.md  features-mcp.md  features-navigation.md  features-og-image.md  features-projections.md  features-queries-caching.md  features-rsc.md  features-runtime.md  features-styling.md  features-web-standards.md
apps/june.build/content/posts/: 2026-06-10-anatomy-of-a-59ms-cold-start.md  2026-06-10-typesetting-chinese-at-the-edge.md  2026-06-10-typesetting-cjk-at-the-edge.md  2026-06-12-building-june-build-with-june.md  2026-06-12-built-in-og-image.md
bench/: results.json
bench/scenarios/: .gitignore  README.md
bench/scenarios/edge-d1-remote/: README.md  wrangler.jsonc
bench/scenarios/edge-d1-remote/src/: index.ts
bench/scenarios/juno-compile-once/: README.md  bench.mjs  harness.mjs  juno.mjs  package.json
bench/scenarios/sqlite-driver-libsql/: README.md  libsql.mjs  package.json
docs/: auth-integration.md  cli.md  data-layer-boundary.md  juno-positioning.md  juno-sqlite-performance.md  model-eval-navigation.md  navigation-tiers.md  runtime-convergence.md  styling.md
examples/basic/: CHANGELOG.md  README.md  june.config.ts  package.json
examples/basic/app/: Counter.tsx  _client.tsx  _content.ts  _extra.ts  _islands.gen.ts  _middleware.ts  layout.tsx  page.tsx
examples/basic/app/cart/: AddToCart.tsx  CartBadge.tsx  cart-store.ts  page.tsx
examples/basic/app/counter/: Counter.tsx  page.tsx
examples/basic/app/poc/: Counter.tsx  Tabs.tsx  page.tsx
examples/basic/app/poc-lite/: page.tsx
examples/i18n/: CHANGELOG.md  README.md  june.config.ts  package.json
examples/i18n/app/: _content.ts  _messages.ts  page.tsx
examples/i18n/messages/: de.json  en.json
examples/juno-crud/: CHANGELOG.md  README.md  june.config.ts  package.json  tsconfig.json  validate.ts
examples/juno-crud/app/: page.tsx
examples/juno-crud/db/: schema.d.ts
runtime/: Cargo.toml  README.md  build.rs  build.ts
runtime/dev/: client-manifest.ts  gen-client-manifest.ts  prebundle-deps.ts  smoke.sh
runtime/js/: Counter.tsx  bench-page.tsx  client-entry.tsx  dev-client-entry.tsx  install-streams.ts  server-entry.tsx  shims.ts  ssr-entry.tsx  vendor-client.ts  vendor-server.ts  webpack-shim-browser.ts
runtime/src/: main.rs  web_entry.js
runtime/src/netshim/: 02_tls.js
scripts/: smoke-node.ts  smoke-packed.sh
tests/: phantom-deps.test.ts
(+19 files in other folders)
